Added Config to the project, and made contact IP/Port, our IP, TGossip, TFail members of that config.
I also made MemberList not static, just in case we want to use it later for monitoring multiple groups of machines with multiple gossip instances.

--- a/DistributedGroupMembership/Makefile
+++ b/DistributedGroupMembership/Makefile
@@ -6,13 +6,14 @@ FILES = src/ConnectionHandler.java\
 	src/MembershipController.java\
 	src/MembershipEntry.java\
 	src/MembershipList.java\
-	src/OwnIP.java\
 	src/Supplier.java\
-	src/UserInputHandler.java
+	src/UserInputHandler.java\
+	src/Config.java
 
 
 all : $(FILES)
 	-@mkdir $(OUTPUTDIR)
+	-@cp gossip.conf $(OUTPUTDIR)/
 	javac $(FILES) -d $(OUTPUTDIR)
 
 clean : 
